# simplelist

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  simplelist.py  simplelist.yaml
.github/: renovate.json
.github/workflows/: lint.yaml  release.yaml
tests/: test_basic.py
