[project]
name = "simplelist"
version = "1.1.1"
description = "A simple mailing list tool designed for Postfix."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
simplelist = "simplelist:main"