[metadata]
name = simplelist
version = 1.1.0
description = a simple mailing list tool designed for Postfix.
long_description = file: README.md, LICENSE
license = MIT
license_file = LICENSE
classifiers =
    Framework :: Django
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
scripts =
    simplelist.py
install_requires =
    pyyaml

[flake8]
format = wemake
ignore = E501
max-line-length = 100
exclude = setup.py

[darglint]
docstring_style=sphinx